--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,9 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <!-- Google Sign-In Web Configuration -->
+  <meta name="google-signin-client_id" content="969900702891-7u9bffcag2l0vcb1vrb4b92bsg16bp0q.apps.googleusercontent.com">
+
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
